tests/non-regression/066-err-bad-style-int.dfd
style item-text-width abc
